# episode-code

./: AGENTS.md  README.md
.kiro/hooks/: docs-sync-hook.kiro.hook
.kiro/specs/dotnet-dynamodb-lambda/: design.md  requirements.md  tasks.md
episode-10/: cdk-construct.ts  cdk.json  package-lock.json  package.json
episode-11/: bootstrap.ts  cdk-app.ts  cdk-construct.ts  index.ts  mcp.ts  package-lock.json  package.json
episode-15/: .env  README.md  cdk.json  eslintrc.json  main.py  package-lock.json  package.json  pyproject.toml
episode-15/agents/: a2a_client.py  a2a_server.py  client.py  example_agent.py
episode-15/lib/: episode-15-stack.ts  episode-15.ts  handler.ts  schema.yaml  seed-users.ts
episode-15/test/: episode-15.test.ts
episode-15b/: cdk-app.ts  cdk-construct.ts  cdk.json  package.json
episode-15b/src/Episode15b.Lambda/: Function.cs  (+1 more)
episode-3/: index.ts  package-lock.json  package.json
episode-4/: .prettierrc  eslintrc.json  package-lock.json  package.json
episode-4/lib/: process-handler.ts
episode-5/: .env  index.ts  package-lock.json  package.json
episode-6/: index.ts  package-lock.json  package.json  tsconfig.json
episode-7/: aurora-db.ts  cdk.json  eslintrc.json  neon-db.ts  package-lock.json  package.json
episode-7/lib/: episode-7-stack.ts  episode-7.ts
episode-7/test/: episode-7.test.ts
episode-8/: package-lock.json  package.json
episode-8/lib/: episode-8-stack.ts
episode-9/: cdk-app.ts  cdk-construct.ts  handler.ts
episode-9/lib/: episode-8.ts  handler.ts  schema.yaml
episode-9/test/: episode-7.test.ts
(+3 files in other folders)
